# Laboratory_2_OS

./: CMakeLists.txt  Main.cpp  README.md
Core/Globals/: globals.h
Core/Threads/: threads.cpp  threads.h
Core/Utilities/: utilities.cpp  utilities.h
Main/Main/: main.cpp  main.h
Test/: test.cpp
